Fix color contrast issue

--- a/wp-content/themes/prioritat-LaTempesta/css/child-theme.css
+++ b/wp-content/themes/prioritat-LaTempesta/css/child-theme.css
@@ -16993,7 +16993,7 @@ a.read-more:where(:hover, :focus)::after {
 .post-noticies-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-  gap: 2rem;
+  gap: 3rem;
 }
 #noticies .post-list article,
 .post-noticies-list article {
@@ -17760,14 +17760,14 @@ iframe {
 }
 
 input.mce_inline_error {
-  border: 2px solid #e85c41 !important;
+  border: 2px solid #a31b00 !important;
 }
 
 div.mce_inline_error {
   margin: 0 !important;
   padding: 0.25rem 0 !important;
   font-size: 0.875rem;
-  color: #e85c41 !important;
+  color: #a31b00 !important;
   background-color: transparent !important;
 }
 
