--- a/wp-content/themes/prioritat-LaTempesta/src/sass/theme/_child_theme.scss
+++ b/wp-content/themes/prioritat-LaTempesta/src/sass/theme/_child_theme.scss
@@ -1738,14 +1738,14 @@ iframe {
 }
 
 input.mce_inline_error {
-    border: 2px solid #e85c41 !important;
+    border: 2px solid #a31b00 !important;
 }
 
 div.mce_inline_error {
     margin: 0 !important;
     padding: 0.25rem 0 !important;
     font-size: 0.875rem;
-    color: #e85c41 !important;
+    color: #a31b00 !important;
     background-color: transparent !important;
 }
 
